[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 6.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "asphalt"
description = "A microframework for network oriented applications"
readme = "README.rst"
authors = [{name = "Alex Grönholm", email = "alex.gronholm@nextday.fi"}]
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AnyIO",
    "Framework :: AsyncIO",
    "Framework :: Trio",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "anyio ~= 4.0",
    "importlib_metadata >= 4.4; python_version < '3.10'",
    "typing_extensions; python_version < '3.10'",
    "exceptiongroup; python_version < '3.11'",
    "ruamel.yaml >= 0.15",
    "click >= 6.6"
]
dynamic = ["version"]

[project.urls]
"Component projects" = "https://github.com/asphalt-framework"
Documentation = "https://asphalt.readthedocs.org/en/latest/"
"Help and support" = "https://github.com/asphalt-framework/asphalt/wiki/Help-and-support"
"Source code" = "https://github.com/asphalt-framework/asphalt"
"Issue tracker" = "https://github.com/asphalt-framework/asphalt/issues"

[project.optional-dependencies]
test = [
    "anyio[trio] ~= 4.0",
    "coverage >= 7",
    "pytest >= 3.9",
    "uvloop; python_implementation == 'CPython' and platform_system != 'Windows'",
]
doc = [
    "Sphinx >= 6.0",
    "sphinx_rtd_theme >= 1.2.0",
    "sphinx-autodoc-typehints >= 1.22",
]

[project.scripts]
asphalt = "asphalt.core._cli:main"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.ruff]
select = [
    "E", "F", "W",  # default flake-8
    "I",            # isort
    "PGH",          # pygrep-hooks
    "UP",           # pyupgrade
]

[tool.ruff.isort]
known-first-party = ["asphalt.core"]

[tool.pytest.ini_options]
addopts = "-rsx --tb=short"
testpaths = ["tests"]

[tool.mypy]
mypy_path = ["src", "tests", "examples/tutorial1", "examples/tutorial2"]
explicit_package_bases = true

[tool.coverage.run]
source = ["asphalt"]
relative_files = true
branch = true

[tool.coverage.report]
show_missing = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39, py310, py311, py312, pypy3
skip_missing_interpreters = true
minversion = 4.0

[testenv]
extras = test
commands = python -m pytest {posargs}

[testenv:pypy3]
basepython = pypy3.9

[testenv:mypy]
basepython = python3.9
commands = mypy src tests examples
deps =
  asphalt-mailer
  httpx
  mypy

[testenv:docs]
extras = doc
commands = sphinx-build docs build/sphinx {posargs}

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    pypy-3: pypy3
"""
