[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 6.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "asphalt"
description = "A microframework for network oriented applications"
readme = "README.rst"
authors = [{name = "Alex Grönholm", email = "alex.gronholm@nextday.fi"}]
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AnyIO",
    "Framework :: AsyncIO",
    "Framework :: Trio",
    "Typing :: Typed",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "anyio ~= 4.1",
    "importlib_metadata >= 4.4; python_version < '3.10'",
    "typing_extensions; python_version < '3.10'",
    "exceptiongroup >= 1.2.0",
    "pyyaml ~= 6.0",
    "click >= 6.6"
]
dynamic = ["version"]

[project.urls]
"Component projects" = "https://github.com/asphalt-framework"
Documentation = "https://asphalt.readthedocs.org/en/latest/"
"Help and support" = "https://github.com/asphalt-framework/asphalt/wiki/Help-and-support"
"Source code" = "https://github.com/asphalt-framework/asphalt"
"Issue tracker" = "https://github.com/asphalt-framework/asphalt/issues"

[project.optional-dependencies]
test = [
    "anyio[trio] ~= 4.1",
    "coverage >= 7",
    "pytest >= 7",
    "uvloop; python_implementation == 'CPython' and platform_system != 'Windows'",
]
doc = [
    "Sphinx >= 7.0",
    "sphinx-rtd-theme >= 1.3.0",
    "sphinx-autodoc-typehints >= 1.22",
]

[project.scripts]
asphalt = "asphalt.core._cli:main"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.ruff]
select = [
    "ASYNC",        # flake8-async
    "E", "F", "W",  # default Flake8
    "G",            # flake8-logging-format
    "I",            # isort
    "ISC",          # flake8-implicit-str-concat
    "PGH",          # pygrep-hooks
    "RUF100",       # unused noqa (yesqa)
    "UP",           # pyupgrade
]

[tool.ruff.isort]
known-first-party = ["asphalt.core"]

[tool.pytest.ini_options]
addopts = "-rsx --tb=short"
testpaths = ["tests"]

[tool.mypy]
mypy_path = ["src", "tests", "examples/tutorial1", "examples/tutorial2"]
explicit_package_bases = true

[tool.coverage.run]
source = ["asphalt"]
relative_files = true
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = [
    "@overload"
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, py312, pypy3
skip_missing_interpreters = true
minversion = 4.0

[testenv]
extras = test
commands = python -m pytest {posargs}

[testenv:pypy3]
basepython = pypy3.10

[testenv:docs]
extras = doc
commands = sphinx-build -n docs build/sphinx {posargs}
package = editable
"""
