[metadata]
name = asphalt
description = A microframework for network oriented applications
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
project_urls =
    Component projects = https://github.com/asphalt-framework
    Documentation = http://asphalt.readthedocs.org/en/latest/
    Help and support = https://github.com/asphalt-framework/asphalt/wiki/Help-and-support
    Source code = https://github.com/asphalt-framework/asphalt
    Issue tracker = https://github.com/asphalt-framework/asphalt/issues
license = Apache License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries :: Application Frameworks
    Framework :: AsyncIO
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    = src
packages = find_namespace:
python_requires = >=3.7
install_requires =
    setuptools  # this is here to tell downstream packagers that it needs pkg_resources
    ruamel.yaml >= 0.15
    typeguard ~= 2.0
    async-generator ~= 1.4
    asyncio_extras ~= 1.3
    async_timeout >= 2.0
    click >= 6.6

[options.packages.find]
where = src
include = asphalt.*

[options.extras_require]
uvloop = uvloop >= 0.4.10
tokio = tokio
test =
    pytest >= 3.9
    pytest-cov
    uvloop; python_implementation == "CPython"
doc =
    Sphinx >= 1.5
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.2.0
    sphinxcontrib-asyncio >= 0.2.0

[options.entry_points]
console_scripts =
    asphalt = asphalt.core.cli:main
asphalt.core.event_loop_policies =
    uvloop = uvloop:EventLoopPolicy [uvloop]
    tokio = tokio:TokioLoopPolicy [tokio]

[flake8]
max-line-length = 99
ignore = E251, F401, F403, F999, W503

[mypy]
ignore_missing_imports = true
